k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amori-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amori-backend
  template:
    metadata:
      labels:
        app: amori-backend
    spec:
      containers:
      - name: amori-backend-container
        image: asia-northeast1-docker.pkg.dev/amori-475204/amori-docker-images/amori-backend:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /  
            port: 8080 
          initialDelaySeconds: 60 
          periodSeconds: 10     
          timeoutSeconds: 5
          failureThreshold: 3       
        
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 15
          timeoutSeconds: 5
