k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amori-backend-service
spec:
  type: ClusterIP 
  selector:
    app: amori-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
